<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/your_password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repeatpasswordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/your_name"
        android:inputType="textPersonName"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginSingUpButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:background="@color/yellow"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleLoginSignUpButton"
        android:text="@string/tap_to_log_in"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:onClick="toggleLoginMode"/>

</LinearLayout>